<resources>
    <string name="app_name">Creative</string>
    <string name="welcome">Welcome!!!</string>
    <string name="your_balance">Balance</string>
    <string name="your_ingredients">Ingredients</string>
    <string name="your_goods">Goods</string>
    <string name="your_costs">Costs</string>
    <string name="change">Change</string>
    <string name="enterBalance">Enter your balance</string>
    <string name="confirm">Confirm</string>
    <string name="missing">Missing</string>
</resources>
