<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorGray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/your_ingredients"
        android:typeface="serif"
        android:textSize="65sp"
        android:textColor="@color/colorBlue"/>


    <ScrollView
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorWhite">

        <LinearLayout
            android:id="@+id/ScLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.AppCompatEditText
        android:layout_marginTop="10dp"
        android:id="@+id/editText_ingredient"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/enterBalance"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/colorBlue"
        android:inputType="text" />

    <Button
        android:id="@+id/bottom_confirm"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:onClick="ClickConfirm"
        android:textSize="30sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/add_ingredient"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:textColor="@color/colorRed"
        android:layout_gravity="center"/>

</LinearLayout>